welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:8: error: not found: value |
  if (|y==w|x==z|w==z|x==y){
      ^shareDigit:8: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
  if (|y==w|x==z|w==z|x==y){
        ^shareDigit:8: error: not found: value |
  if (|y==w|x==z|w==z|x==y){
           ^shareDigit:8: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
  if (|y==w|x==z|w==z|x==y){
             ^shareDigit:8: error: not found: value |
  if (|y==w|x==z|w==z|x==y){
                ^shareDigit:8: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
  if (|y==w|x==z|w==z|x==y){
                  ^shareDigit:8: error: not found: value |
  if (|y==w|x==z|w==z|x==y){
                     ^shareDigit:8: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
  if (|y==w|x==z|w==z|x==y){
                       ^